파비콘 교체

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>김수연 웹 포폴</title>
 
     <!-- style -->
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/swiper-bundle.css">
+    <link rel="stylesheet" href="css/lightgallery.css">
+    <!-- //style -->
+
+    <!-- favicon -->
+    <link rel="shortcut icon" href="img/k_favicon.ico">
     <!-- //favicon -->
 </head>
 
