--- a/web_portfolio/sub2/index.html
+++ b/web_portfolio/sub2/index.html
@@ -17,6 +17,7 @@
         rel="stylesheet">
 
     <!-- favicon -->
+    <link rel="shortcut icon" href="img/k_favicon.ico">
     <!-- //favicon -->
 </head>
 
