--- a/web_portfolio/sub4/index.html
+++ b/web_portfolio/sub4/index.html
@@ -15,6 +15,7 @@
     <!-- //style -->
 
     <!-- favicon -->
+    <link rel="shortcut icon" href="img/k_favicon.ico">
     <!-- //favicon -->
 </head>
 
