--- a/web_portfolio/sub3/index.html
+++ b/web_portfolio/sub3/index.html
@@ -13,6 +13,7 @@
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
     
     <!-- favicon -->
+    <link rel="shortcut icon" href="img/k_favicon.ico">
     <!-- //favicon -->
 </head>
 
