--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/swiper-bundle.css">
     <link rel="stylesheet" href="css/lightgallery.css">
+    <link rel="stylesheet" href="css/lg-zoom.css">
     <!-- //style -->
 
     <!-- favicon -->
