--- a/web_portfolio/sub4/index.html
+++ b/web_portfolio/sub4/index.html
@@ -59,9 +59,9 @@
 
                 <dt>프로젝트 소개</dt>
                 <dd class="intro">
-                    처음 화면에 타이핑 효과와 프로필 사진 뒤에 도형에 애니메이션을 주어서 간결하지만 동적인 느낌을 주려고 했습니다.<br>
+                    처음 화면에 타이핑 효과와 프로필 사진 뒤에 도형에 애니메이션을 주어서 간결하지만 동적인 느낌을 주었습니다.<br>
+                    가장 중요한 부분인 포트폴리오에는 png의 목업 이미지를 배치해 사이트를 미리 보여주도록 했고 swiper slider를 써서 슬라이딩이 되도록 했습니다.<br>
                     그리고 반응형 사이트로 만들어 어떤 디바이스로라도 보기 편하도록 퍼블리싱했습니다.<br>
-                    포트폴리오 부분에는 슬라이드를 활용해서 png의 목업 이미지를 이용해 사이트를 미리 보여주도록 했습니다.<br>
                 </dd>
 
                 <dt>주요 컬러</dt>
