검색엔진 최적화

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>김수연 웹 포폴</title>
+    <meta name="description" content="안녕하세요:) 신입 웹퍼블리셔 김수연의 포트폴리오입니다!">
+    <meta name="keywords" content="반응형사이트, 웹퍼블리셔, 웹접근성, HTML5, 김수연, 포트폴리오">
+    <title>신입 웹퍼블리셔 김수연 포트폴리오</title>
 
     <!-- style -->
     <link rel="stylesheet" href="css/style.css">
