--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="ksy">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="안녕하세요:) 신입 웹퍼블리셔 김수연의 포트폴리오입니다!">
     <meta name="keywords" content="반응형사이트, 웹퍼블리셔, 웹접근성, HTML5, 김수연, 포트폴리오">
