--- a/web_portfolio/sub1/index.html
+++ b/web_portfolio/sub1/index.html
@@ -74,6 +74,9 @@
 
                 <dt>디자인 시안</dt>
                 <dd class="template">
+                    <a href="img/coffeenie_sub_design.png">
+                        <img src="img/coffeenie_sub_design.png" alt="커피니 배너 디자인 시안">
+                    </a>
                     <a href="img/coffeenie_sub.png" target="_blank">
                         <img src="img/coffeenie_sub.png" alt="커피니 웹디자인 시안">
                     </a>
