디자인 시안 추가

--- a/web_portfolio/sub2/index.html
+++ b/web_portfolio/sub2/index.html
@@ -78,6 +78,9 @@
 
                 <dt>디자인 시안</dt>
                 <dd class="template">
+                    <a href="img/espoir_sub_design.png" target="_blank">
+                        <img src="img/espoir_sub_design.png" alt="커피니 배너 디자인 시안">
+                    </a>
                     <a href="img/espoir_sub.png" target="_blank">
                         <img src="img/espoir_sub.png" alt="커피니 웹디자인 시안">
                     </a>
