--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                         보러가기
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
-                                            <path id="path_4" data-name="path 4" class="blue"
+                                            <path data-name="path 4" class="blue"
                                                 d="M875.443,2491.8h12l-4.659-3"
                                                 transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
                                                 stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
@@ -179,7 +179,7 @@
                                     <a class="work" href="web_portfolio/sub1/index.html" target="_blank">작업 내용
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
-                                            <path id="path_4" data-name="path 4" class="blue"
+                                            <path data-name="path 4" class="blue"
                                                 d="M875.443,2491.8h12l-4.659-3"
                                                 transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
                                                 stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
@@ -203,7 +203,7 @@
                                         target="_blank">사이트 보러가기
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
-                                            <path id="path_4" data-name="path 4" class="blue"
+                                            <path data-name="path 4" class="blue"
                                                 d="M875.443,2491.8h12l-4.659-3"
                                                 transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
                                                 stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
@@ -212,7 +212,7 @@
                                     <a class="work" href="web_portfolio/sub2/index.html" target="_blank">작업 내용
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
-                                            <path id="path_4" data-name="path 4" class="blue"
+                                            <path data-name="path 4" class="blue"
                                                 d="M875.443,2491.8h12l-4.659-3"
                                                 transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
                                                 stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
@@ -236,7 +236,7 @@
                                         target="_blank">사이트 보러가기
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
-                                            <path id="path_4" data-name="path 4" class="blue"
+                                            <path data-name="path 4" class="blue"
                                                 d="M875.443,2491.8h12l-4.659-3"
                                                 transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
                                                 stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
@@ -245,7 +245,7 @@
                                     <a class="work" href="web_portfolio/sub3/index.html" target="_blank">작업 내용
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
-                                            <path id="path_4" data-name="path 4" class="blue"
+                                            <path data-name="path 4" class="blue"
                                                 d="M875.443,2491.8h12l-4.659-3"
                                                 transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
                                                 stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
@@ -270,7 +270,7 @@
                                         보러가기
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
-                                            <path id="path_4" data-name="path 4" class="blue"
+                                            <path data-name="path 4" class="blue"
                                                 d="M875.443,2491.8h12l-4.659-3"
                                                 transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
                                                 stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
@@ -279,7 +279,7 @@
                                     <a class="work" href="web_portfolio/sub4/index.html" target="_blank">작업 내용
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
-                                            <path id="path_4" data-name="path 4" class="blue"
+                                            <path data-name="path 4" class="blue"
                                                 d="M875.443,2491.8h12l-4.659-3"
                                                 transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
                                                 stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
