--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
     <!-- style -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
+
+    <!-- swiper slider -->
     <link rel="stylesheet" href="css/swiper-bundle.css">
+
+    <!-- lightgallery -->
     <link rel="stylesheet" href="css/lightgallery.css">
     <link rel="stylesheet" href="css/lg-zoom.css">
-    <!-- //style -->
 
     <!-- favicon -->
     <link rel="shortcut icon" href="img/k_favicon.ico">
-    <!-- //favicon -->
 </head>
 
 <body>
-    <!-- aside -->
+    <!-- aside menu -->
     <aside>
         <div class="aside_box">
             <h1>
@@ -51,6 +53,7 @@
                 <a href="#" class="ir_pm">모바일 버튼<span></span><span></span><span></span></a>
             </div>
         </div>
+        <!-- moblie menu -->
         <div class="m_menu">
             <nav>
                 <ul>
@@ -71,13 +74,15 @@
             </div> -->
         </div>
         <div class="m_back"></div>
+        <!-- //moblie menu -->
     </aside>
-    <!-- //aside -->
+    <!-- //aside menu -->
 
-    <!-- main -->
+    <!-- content -->
     <div class="content">
         <div class="container">
             <div class="row">
+                <!-- opening -->
                 <section id="main">
                     <div class="emoji"></div>
                     <h2 class="text_box">
@@ -89,6 +94,9 @@
                         </a>
                     </div>
                 </section>
+                <!-- //opening -->
+
+                <!-- introduce -->
                 <section id="intro" class="mb90 ani">
                     <h2 class="title_bold">About me</h2>
                     <div class="intro_box">
@@ -113,6 +121,9 @@
                         </div>
                     </div>
                 </section>
+                <!-- //introduce -->
+
+                <!-- skills -->
                 <section id="skills" class="mb90 ani">
                     <h2 class="title_bold">Skills</h2>
                     <div class="skill_box">
@@ -148,7 +159,10 @@
                         </div>
                     </div>
                 </section>
+                <!-- //skills -->
             </div>
+
+            <!-- portfolio -->
             <section id="portfolio" class="mb90 ani">
                 <h2 class="title_bold">Portfolio</h2>
                 <div class="swiper-container slider">
@@ -297,7 +311,9 @@
                     <div class="swiper-button-next"></div>
                 </div>
             </section>
+            <!-- //portfolio -->
 
+            <!-- design -->
             <section id="design" class="mb90 ani">
                 <div class="row">
                     <h2 class="title_bold">Design</h2>
@@ -377,7 +393,7 @@
                     </div>
                 </div>
             </section>
-            <!-- //main -->
+            <!-- //design -->
 
             <!-- footer -->
             <section id="contact" class="ani">
@@ -397,6 +413,9 @@
             <!-- //footer -->
         </div>
     </div>
+    <!-- //content -->
+
+    <!-- top scroll button -->
     <div class="top_btn">
         <a href="#">
             <svg xmlns="http://www.w3.org/2000/svg" width="24.785" height="11.11" viewBox="0 0 24.785 11.11">
@@ -406,6 +425,8 @@
             </svg>
         </a>
     </div>
+    <!-- //top scroll button -->
+    
     <!-- script -->
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
