--- a/index.html
+++ b/index.html
@@ -429,6 +429,7 @@
     
     <!-- script -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.3.0/lightgallery.min.js"></script>
@@ -465,6 +466,8 @@
         });
     </script>
     <script src="js/custom.js"></script>
+    <script>
+    </script>
     <!-- //script -->
 </body>
 
