--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
     <!-- //top scroll button -->
     
     <!-- script -->
-    <script src="https://polyfill.io/v3/polyfill.min.js"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es5%2Ces6%2CArray.prototype.forEach"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
