--- a/index.html
+++ b/index.html
@@ -184,8 +184,7 @@
                                         보러가기
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
-                                            <path data-name="path 4" class="blue"
-                                                d="M875.443,2491.8h12l-4.659-3"
+                                            <path data-name="path 4" class="blue" d="M875.443,2491.8h12l-4.659-3"
                                                 transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
                                                 stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
                                         </svg>
@@ -193,8 +192,7 @@
                                     <a class="work" href="web_portfolio/sub1/index.html" target="_blank">작업 내용
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
-                                            <path data-name="path 4" class="blue"
-                                                d="M875.443,2491.8h12l-4.659-3"
+                                            <path data-name="path 4" class="blue" d="M875.443,2491.8h12l-4.659-3"
                                                 transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
                                                 stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
                                         </svg>
@@ -217,8 +215,7 @@
                                         target="_blank">사이트 보러가기
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
-                                            <path data-name="path 4" class="blue"
-                                                d="M875.443,2491.8h12l-4.659-3"
+                                            <path data-name="path 4" class="blue" d="M875.443,2491.8h12l-4.659-3"
                                                 transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
                                                 stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
                                         </svg>
@@ -226,8 +223,7 @@
                                     <a class="work" href="web_portfolio/sub2/index.html" target="_blank">작업 내용
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
-                                            <path data-name="path 4" class="blue"
-                                                d="M875.443,2491.8h12l-4.659-3"
+                                            <path data-name="path 4" class="blue" d="M875.443,2491.8h12l-4.659-3"
                                                 transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
                                                 stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
                                         </svg>
@@ -250,8 +246,7 @@
                                         target="_blank">사이트 보러가기
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
-                                            <path data-name="path 4" class="blue"
-                                                d="M875.443,2491.8h12l-4.659-3"
+                                            <path data-name="path 4" class="blue" d="M875.443,2491.8h12l-4.659-3"
                                                 transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
                                                 stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
                                         </svg>
@@ -259,8 +254,7 @@
                                     <a class="work" href="web_portfolio/sub3/index.html" target="_blank">작업 내용
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
-                                            <path data-name="path 4" class="blue"
-                                                d="M875.443,2491.8h12l-4.659-3"
+                                            <path data-name="path 4" class="blue" d="M875.443,2491.8h12l-4.659-3"
                                                 transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
                                                 stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
                                         </svg>
@@ -284,8 +278,7 @@
                                         보러가기
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
-                                            <path data-name="path 4" class="blue"
-                                                d="M875.443,2491.8h12l-4.659-3"
+                                            <path data-name="path 4" class="blue" d="M875.443,2491.8h12l-4.659-3"
                                                 transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
                                                 stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
                                         </svg>
@@ -293,8 +286,7 @@
                                     <a class="work" href="web_portfolio/sub4/index.html" target="_blank">작업 내용
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
-                                            <path data-name="path 4" class="blue"
-                                                d="M875.443,2491.8h12l-4.659-3"
+                                            <path data-name="path 4" class="blue" d="M875.443,2491.8h12l-4.659-3"
                                                 transform="translate(-874.943 -2488.113)" fill="none" stroke="#fff"
                                                 stroke-linecap="round" stroke-linejoin="round" stroke-width="1" />
                                         </svg>
@@ -426,9 +418,11 @@
         </a>
     </div>
     <!-- //top scroll button -->
-    
+
     <!-- script -->
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es5%2Ces6%2CArray.prototype.forEach"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js"></script>
+    <script src="sample.js" type="text/babel" data-presets="es2015,stage-2"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
