--- a/index.html
+++ b/index.html
@@ -422,7 +422,6 @@
     <!-- script -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/7.10.4/polyfill.min.js"></script>
-    <script type="text/babel" src="/plugin/devbox.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
@@ -459,7 +458,7 @@
 
         });
     </script>
-    <script src="js/custom.js"></script>
+    <script type="text/babel" src="js/custom.js"></script>
     <script>
     </script>
     <!-- //script -->
