--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <section id="main">
                     <div class="emoji"></div>
                     <h2 class="text_box">
-                        <span class="t_text"></span><span class="line">|</span>
+                        <strong class="t_text"></strong><span class="line">|</span>
                     </h2>
                     <div class="scroll_box">
                         <a href="#">
