--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 
         });
     </script>
-    <script type="text/babel" src="js/custom.js"></script>
+    <script charset="utf-8" src="js/custom.js"></script>
     <script>
     </script>
     <!-- //script -->
