--- a/web_portfolio/andbag/index.html
+++ b/web_portfolio/andbag/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/reset.css">
 
     <!-- swiper 슬라이드 링크 -->
-    <link rel="stylesheet" href="css/swiper-bundle.css" />
+    <link rel="stylesheet" href="css/swiper.css" />
 </head>
 
 <body>
@@ -795,7 +795,7 @@
 
     <!-- js -->
     <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="js/swiper.min.js"></script>
     <script src="js/index.js"></script>
 </body>
 
