--- a/web_portfolio/andbag/index.html
+++ b/web_portfolio/andbag/index.html
@@ -670,16 +670,16 @@
             <div class="row">
                 <div class="campaign">
                     <h2>CAMPAIGN</h2>
-                    <div class="cam_box">
+                    <div class="cam_box clearfix">
                         <div class="item1">
                             <div class="text_box">
-                                <h3>ANNE KLEIN<br>21SS Lookbook</h3>
+                                <h3>Callicollection</h3>
                                 <button>더 보러가기&emsp;></button>
                             </div>
                         </div>
                         <div class="item2">
                             <div class="text_box">
-                                <h3>Callicollection</h3>
+                                <h3>ANNE KLEIN<br>21SS Lookbook</h3>
                                 <button>더 보러가기&emsp;></button>
                             </div>
                         </div>
@@ -742,7 +742,7 @@
                                 <a href="#">Customer Service</a>
                                 <ul>
                                     <li><a href="#">FAQ</a></li>
-                                    <li><a href="#">Q&A</a></li>
+                                    <li><a href="#">Q&amp;A</a></li>
                                     <li><a href="#">Notice</a></li>
                                     <li><a href="#">Review</a></li>
                                 </ul>
