--- a/index.html
+++ b/index.html
@@ -391,14 +391,21 @@
             <section id="contact" class="ani">
                 <div class="row">
                     <h2 class="title_bold">Contact</h2>
-                    <div class="mail_icon ir_pm">메일 아이콘</div>
-                    <form class="address_box">
+                    <div class="mail_link">
+                        <div class="mail_icon ir_pm">메일 아이콘</div>
+                        <a href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=ksysos36@gmail.com" target="_blank" class="mail_text">ksysos36@gmail.com</a>
+                        <div class="mail_thanks">
+                            <p>저의 포트폴리오를 방문해주셔서 감사합니다.</p>
+                            <p>이메일 문의를 주시면 최대한 빠르게 답장하겠습니다.</p>
+                        </div>
+                    </div>
+                    <!-- <form class="address_box">
                         <input type="text" name="name" placeholder="성함을 입력해주세요">
                         <input type="text" name="email" placeholder="메일 주소를 입력해주세요">
                         <input type="text" name="phone" placeholder="연락처를 입력해주세요 (생략 가능)">
                         <textarea name="message" rows="5" placeholder="내용을 입력해주세요"></textarea>
                         <input type="button" name="submit" class="btn blue" value="메일 보내기" />
-                    </form>
+                    </form> -->
                     <address>COPYRIGHT 2021 KIM SU YEON. all rights reserved.</address>
                 </div>
             </section>
@@ -420,11 +427,11 @@
     <!-- //top scroll button -->
 
     <!-- script -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script> -->
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/swiper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.3.0/lightgallery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/2.3.0/plugins/zoom/lg-zoom.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
     <script src="js/custom.js"></script>
     <!-- //script -->
 </body>
