자기소개 구조 수정

--- a/index.html
+++ b/index.html
@@ -109,15 +109,17 @@
                             <p class="hashtag">#신입#신중함#집념#긍정적에너지<br>#계속공부중#일본어가능</p>
                         </div>
                         <div class="intro_text">
-                            <p><b>이름</b><span>김수연</span></p>
-                            <p><b>거주지</b><span>대전광역시</span></p>
-                            <p><b>학력</b><span>금강대학교 일본어통번역학과 졸업</span></p>
-                            <p><b>자격증</b><span>웹디자인기능사</span><br><span class="space">ACA Photoshop
-                                    CC
-                                    2015</span><br><span class="space">ACA Illustrator CC 2015</span></p>
-                            <p><b>이메일</b><span>36ksy@naver.com</span></p>
-                            <p class="resolution">"div 태그가 여러 콘텐츠들을 한데 아우르는 것처럼<br>
-                                사람들과도 잘 아우르는 웹퍼블리셔가 되겠습니다."</p>
+                            <div class="intro_text_box">
+                                <p><b>이름</b><span>김수연</span></p>
+                                <p><b>거주지</b><span>대전광역시</span></p>
+                                <p><b>학력</b><span>금강대학교 일본어통번역학과 졸업</span></p>
+                                <p><b>자격증</b><span>웹디자인기능사</span><br><span class="space">ACA Photoshop
+                                        CC
+                                        2015</span><br><span class="space">ACA Illustrator CC 2015</span></p>
+                                <p><b>이메일</b><span>ksysos36@gmail.com</span></p>
+                                <p class="resolution">"div 태그가 여러 콘텐츠들을 한데 아우르는 것처럼<br>
+                                    사람들과도 잘 아우르는 웹퍼블리셔가 되겠습니다."</p>
+                            </div>
                         </div>
                     </div>
                 </section>
@@ -272,9 +274,7 @@
                                     <h3>김수연 포트폴리오 사이트</h3>
                                 </div>
                                 <div class="slide_btn">
-                                    <a class="site"
-                                        href="https://ksysky.github.io/portfolio"
-                                        target="_blank">사이트
+                                    <a class="site" href="https://ksysky.github.io/portfolio" target="_blank">사이트
                                         보러가기
                                         <svg xmlns="http://www.w3.org/2000/svg" width="13" height="4.191"
                                             viewBox="0 0 13 4.191">
@@ -393,7 +393,8 @@
                     <h2 class="title_bold">Contact</h2>
                     <div class="mail_link">
                         <div class="mail_icon ir_pm">메일 아이콘</div>
-                        <a href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=ksysos36@gmail.com" target="_blank" class="mail_text">ksysos36@gmail.com</a>
+                        <a href="https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=ksysos36@gmail.com"
+                            target="_blank" class="mail_text">ksysos36@gmail.com</a>
                         <div class="mail_thanks">
                             <p>저의 포트폴리오를 방문해주셔서 감사합니다.</p>
                             <p>이메일 문의를 주시면 최대한 빠르게 답장하겠습니다.</p>
