하단 공백 해결

--- a/web_portfolio/sub3/index.html
+++ b/web_portfolio/sub3/index.html
@@ -84,7 +84,7 @@
     </section>
     <footer>
         <div class="container">
-            <address>COPYRIGHT 2021 KIM SU YEON. all rights reserved.</address>
+            <p class="copyright">COPYRIGHT 2021 KIM SU YEON. all rights reserved.</p>
         </div>
     </footer>
     <div class="top_btn">
