--- a/web_portfolio/sub3/index.html
+++ b/web_portfolio/sub3/index.html
@@ -76,7 +76,7 @@
                 <dt>디자인 시안</dt>
                 <dd class="template">
                     <a href="img/andbag_sub.png" target="_blank">
-                        <img src="img/andbag_sub.png" alt="커피니 웹디자인 시안">
+                        <img src="img/andbag_sub.png" alt="앤드백 웹디자인 시안">
                     </a>
                 </dd>
             </dl>
