--- a/web_portfolio/sub3/index.html
+++ b/web_portfolio/sub3/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
     <title>앤드백 작업 내용</title>
 
     <link rel="stylesheet" href="css/style.css">
@@ -83,9 +83,7 @@
         </div>
     </section>
     <footer>
-        <div class="container">
-            <p class="copyright">COPYRIGHT 2021 KIM SU YEON. all rights reserved.</p>
-        </div>
+        <p class="copyright">COPYRIGHT 2021 KIM SU YEON. all rights reserved.</p>
     </footer>
     <div class="top_btn">
         <a href="#header">
@@ -96,8 +94,9 @@
             </svg>
         </a>
     </div>
+    <!-- script -->
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/custom.js"></script>
+    <!-- //script -->
 </body>
-<script src="js/jquery-3.6.0.min.js"></script>
-<script src="js/custom.js"></script>
-
 </html>
