--- a/web_portfolio/sub3/index.html
+++ b/web_portfolio/sub3/index.html
@@ -83,7 +83,7 @@
         </div>
     </section>
     <footer>
-        <p class="copyright">COPYRIGHT 2021 KIM SU YEON. all rights reserved.</p>
+        <address class="copyright">COPYRIGHT 2021 KIM SU YEON. all rights reserved.</address>
     </footer>
     <div class="top_btn">
         <a href="#header">
