--- a/web_portfolio/sub1/index.html
+++ b/web_portfolio/sub1/index.html
@@ -86,7 +86,7 @@
     </section>
     <footer>
         <div class="container">
-            <p class="copyright">COPYRIGHT 2021 KIM SU YEON. all rights reserved.</p>
+            <address class="copyright">COPYRIGHT 2021 KIM SU YEON. all rights reserved.</address>
         </div>
     </footer>
     <div class="top_btn">
