--- a/web_portfolio/sub4/index.html
+++ b/web_portfolio/sub4/index.html
@@ -86,15 +86,15 @@
         </div>
     </section>
     <footer>
-        <div class="container">
-            <address>COPYRIGHT 2021 KIM SU YEON. all rights reserved.</address>
-        </div>
+        <address>COPYRIGHT 2021 KIM SU YEON. all rights reserved.</address>
     </footer>
     <div class="top_btn">
         <a href="#header">
             <svg xmlns="http://www.w3.org/2000/svg" width="24.785" height="11.11" viewBox="0 0 24.785 11.11">
-                <path id="패스_12" data-name="패스 12" d="M1035.03,6977.629l10.988-8.705,10.988,8.705" transform="translate(-1033.625 -6967.924)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
-            </svg>              
+                <path id="패스_12" data-name="패스 12" d="M1035.03,6977.629l10.988-8.705,10.988,8.705"
+                    transform="translate(-1033.625 -6967.924)" fill="none" stroke="#fff" stroke-linecap="round"
+                    stroke-linejoin="round" stroke-width="2" />
+            </svg>
         </a>
     </div>
 </body>
