자격증 수정

--- a/index.html
+++ b/index.html
@@ -112,9 +112,7 @@
                             <p><b>이름</b><span>김수연</span></p>
                             <p><b>거주지</b><span>대전광역시</span></p>
                             <p><b>학력</b><span>금강대학교 일본어통번역학과 졸업</span></p>
-                            <p><b>자격증</b><span>웹디자인기능사</span><br><span class="space">ACA Photoshop
-                                    CC
-                                    2015</span><br><span class="space">ACA Illustrator CC 2015</span></p>
+                            <p><b>자격증</b><span>웹디자인기능사</span><br><span class="space">GTQ 포토샵 1급</span><br><span class="space">GTQ 일러스트레이터 1급</span></p>
                             <p><b>이메일</b><span>ksysos36@gmail.com</span></p>
                             <p class="resolution">"div 태그가 여러 콘텐츠들을 한데 아우르는 것처럼<br>
                                 사람들과도 잘 아우르는 웹퍼블리셔가 되겠습니다."</p>
